src/main/antlr/.antlr/RabbitParser.java
// Generated from /home/ginger/Rabbit/src/main/antlr/RabbitParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RabbitParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, WHITESPACE=4, STRING=5, NUMBER=6, IMPORT=7, 
		FROM=8, PUBLIC=9, PRIVATE=10, PROTECTED=11, INTERNAL=12, MAIN=13, ACCESS_MODIFIER=14, 
		FUNCTION=15, OPERATOR=16, CONSTRUCTOR=17, STATIC=18, OVERRIDE=19, ABSTRACT=20, 
		DEFAULT=21, STRUCT=22, TRAIT=23, EXTENDS=24, IMPLEMENTS=25, SELF=26, SUPER=27, 
		IF=28, ELSE=29, USING=30, WHILE=31, FOR=32, MATCH=33, CASE=34, ANY=35, 
		WITH=36, BREAK=37, CONTINUE=38, PROCEED=39, IN=40, AND=41, OR=42, NOT=43, 
		TRUE=44, FALSE=45, NOTHING=46, NEVER=47, PASS=48, LPAREN=49, RPAREN=50, 
		LBRACE=51, RBRACE=52, LSQBRACKET=53, RSQBRACKET=54, DOT=55, ASSIGN=56, 
		COLON=57, COMMA=58, PLUS=59, MINUS=60, ASTERISK=61, SLASH=62, MODULO=63, 
		GREATERTHAN=64, LESSTHAN=65, GREATEREQUAL=66, LESSEQUAL=67, EQUAL=68, 
		ARROW=69, IDENTIFIER=70;
	public static final int
		RULE_program = 0, RULE_import_line = 1, RULE_statements = 2, RULE_block = 3, 
		RULE_statement = 4, RULE_assignment_op = 5, RULE_assignment = 6, RULE_struct_declaration = 7, 
		RULE_struct_body = 8, RULE_struct_item = 9, RULE_struct_property = 10, 
		RULE_struct_declaration_trait_implementation = 11, RULE_trait_declaration = 12, 
		RULE_trait_declaration_body = 13, RULE_trait_declaration_item = 14, RULE_trait_implementation = 15, 
		RULE_trait_implementation_body = 16, RULE_trait_implementation_item = 17, 
		RULE_function_declaration = 18, RULE_function_modifier = 19, RULE_if_statement = 20, 
		RULE_else_if_block = 21, RULE_else_block = 22, RULE_if_while_statement = 23, 
		RULE_while_statement = 24, RULE_for_statement = 25, RULE_return_type = 26, 
		RULE_argument_list = 27, RULE_argument = 28, RULE_expression = 29, RULE_atom = 30, 
		RULE_boolean_literal = 31, RULE_number = 32, RULE_type_params = 33, RULE_type_param = 34, 
		RULE_type = 35, RULE_full_identifier = 36, RULE_identifier = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "import_line", "statements", "block", "statement", "assignment_op", 
			"assignment", "struct_declaration", "struct_body", "struct_item", "struct_property", 
			"struct_declaration_trait_implementation", "trait_declaration", "trait_declaration_body", 
			"trait_declaration_item", "trait_implementation", "trait_implementation_body", 
			"trait_implementation_item", "function_declaration", "function_modifier", 
			"if_statement", "else_if_block", "else_block", "if_while_statement", 
			"while_statement", "for_statement", "return_type", "argument_list", "argument", 
			"expression", "atom", "boolean_literal", "number", "type_params", "type_param", 
			"type", "full_identifier", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'import'", "'from'", "'public'", 
			"'private'", "'protected'", "'internal'", "'main'", null, "'function'", 
			"'operator'", "'constructor'", "'static'", "'override'", "'abstract'", 
			"'default'", "'struct'", "'trait'", "'extends'", "'implements'", "'self'", 
			"'super'", "'if'", "'else'", "'using'", "'while'", "'for'", "'match'", 
			"'case'", "'any'", "'with'", "'break'", "'continue'", "'proceed'", "'in'", 
			"'and'", "'or'", "'not'", "'true'", "'false'", "'nothing'", "'never'", 
			"'pass'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "'='", "':'", 
			"','", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'>='", "'<='", 
			"'=='", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "WHITESPACE", "STRING", "NUMBER", 
			"IMPORT", "FROM", "PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", "MAIN", 
			"ACCESS_MODIFIER", "FUNCTION", "OPERATOR", "CONSTRUCTOR", "STATIC", "OVERRIDE", 
			"ABSTRACT", "DEFAULT", "STRUCT", "TRAIT", "EXTENDS", "IMPLEMENTS", "SELF", 
			"SUPER", "IF", "ELSE", "USING", "WHILE", "FOR", "MATCH", "CASE", "ANY", 
			"WITH", "BREAK", "CONTINUE", "PROCEED", "IN", "AND", "OR", "NOT", "TRUE", 
			"FALSE", "NOTHING", "NEVER", "PASS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LSQBRACKET", "RSQBRACKET", "DOT", "ASSIGN", "COLON", "COMMA", "PLUS", 
			"MINUS", "ASTERISK", "SLASH", "MODULO", "GREATERTHAN", "LESSTHAN", "GREATEREQUAL", 
			"LESSEQUAL", "EQUAL", "ARROW", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RabbitParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RabbitParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public List<Struct_declarationContext> struct_declaration() {
			return getRuleContexts(Struct_declarationContext.class);
		}
		public Struct_declarationContext struct_declaration(int i) {
			return getRuleContext(Struct_declarationContext.class,i);
		}
		public List<Trait_declarationContext> trait_declaration() {
			return getRuleContexts(Trait_declarationContext.class);
		}
		public Trait_declarationContext trait_declaration(int i) {
			return getRuleContext(Trait_declarationContext.class,i);
		}
		public List<Trait_implementationContext> trait_implementation() {
			return getRuleContexts(Trait_implementationContext.class);
		}
		public Trait_implementationContext trait_implementation(int i) {
			return getRuleContext(Trait_implementationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(80);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(76);
					function_declaration();
					}
					break;
				case 2:
					{
					setState(77);
					struct_declaration();
					}
					break;
				case 3:
					{
					setState(78);
					trait_declaration();
					}
					break;
				case 4:
					{
					setState(79);
					trait_implementation();
					}
					break;
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 13)) & ~0x3f) == 0 && ((1L << (_la - 13)) & ((1L << (MAIN - 13)) | (1L << (ACCESS_MODIFIER - 13)) | (1L << (FUNCTION - 13)) | (1L << (OPERATOR - 13)) | (1L << (STATIC - 13)) | (1L << (OVERRIDE - 13)) | (1L << (ABSTRACT - 13)) | (1L << (STRUCT - 13)) | (1L << (TRAIT - 13)) | (1L << (LESSTHAN - 13)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_lineContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(RabbitParser.IMPORT, 0); }
		public List<Full_identifierContext> full_identifier() {
			return getRuleContexts(Full_identifierContext.class);
		}
		public Full_identifierContext full_identifier(int i) {
			return getRuleContext(Full_identifierContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RabbitParser.FROM, 0); }
		public List<TerminalNode> COMMA() { return getTokens(RabbitParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RabbitParser.COMMA, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RabbitParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RabbitParser.NEWLINE, i);
		}
		public Import_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_line; }
	}

	public final Import_lineContext import_line() throws RecognitionException {
		Import_lineContext _localctx = new Import_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_line);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(IMPORT);
				setState(85);
				full_identifier(0);
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(FROM);
				setState(87);
				full_identifier(0);
				setState(88);
				match(IMPORT);
				setState(89);
				full_identifier(0);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE || _la==COMMA) {
					{
					{
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(90);
						match(NEWLINE);
						}
						}
						setState(95);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(96);
					match(COMMA);
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(97);
						match(NEWLINE);
						}
						}
						setState(102);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(103);
					full_identifier(0);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RabbitParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RabbitParser.NEWLINE, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			statement();
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(112);
						match(NEWLINE);
						}
						}
						setState(115); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(117);
					statement();
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(RabbitParser.COLON, 0); }
		public TerminalNode INDENT() { return getToken(RabbitParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(RabbitParser.DEDENT, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode PASS() { return getToken(RabbitParser.PASS, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(RabbitParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RabbitParser.NEWLINE, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(COLON);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(124);
				match(NEWLINE);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(INDENT);
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
			case NUMBER:
			case MAIN:
			case ACCESS_MODIFIER:
			case FUNCTION:
			case OPERATOR:
			case STATIC:
			case OVERRIDE:
			case ABSTRACT:
			case STRUCT:
			case TRAIT:
			case IF:
			case WHILE:
			case FOR:
			case BREAK:
			case CONTINUE:
			case PROCEED:
			case NOT:
			case TRUE:
			case FALSE:
			case LPAREN:
			case LESSTHAN:
			case IDENTIFIER:
				{
				setState(131);
				statements();
				}
				break;
			case PASS:
				{
				setState(132);
				match(PASS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(135);
				match(NEWLINE);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Struct_declarationContext struct_declaration() {
			return getRuleContext(Struct_declarationContext.class,0);
		}
		public Trait_declarationContext trait_declaration() {
			return getRuleContext(Trait_declarationContext.class,0);
		}
		public Trait_implementationContext trait_implementation() {
			return getRuleContext(Trait_implementationContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public If_while_statementContext if_while_statement() {
			return getRuleContext(If_while_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(RabbitParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(RabbitParser.CONTINUE, 0); }
		public TerminalNode PROCEED() { return getToken(RabbitParser.PROCEED, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				function_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				struct_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				trait_declaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				trait_implementation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(148);
				if_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(149);
				if_while_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(150);
				while_statement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(151);
				for_statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(152);
				match(BREAK);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(153);
				match(CONTINUE);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(154);
				match(PROCEED);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(155);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_opContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(RabbitParser.ASSIGN, 0); }
		public Assignment_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_op; }
	}

	public final Assignment_opContext assignment_op() throws RecognitionException {
		Assignment_opContext _localctx = new Assignment_opContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(ASSIGN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Full_identifierContext full_identifier() {
			return getRuleContext(Full_identifierContext.class,0);
		}
		public Assignment_opContext assignment_op() {
			return getRuleContext(Assignment_opContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RabbitParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RabbitParser.NEWLINE, i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			full_identifier(0);
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(161);
				match(NEWLINE);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			assignment_op();
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(168);
				match(NEWLINE);
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_declarationContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(RabbitParser.STRUCT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(RabbitParser.COLON, 0); }
		public TerminalNode INDENT() { return getToken(RabbitParser.INDENT, 0); }
		public Struct_bodyContext struct_body() {
			return getRuleContext(Struct_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(RabbitParser.DEDENT, 0); }
		public TerminalNode ACCESS_MODIFIER() { return getToken(RabbitParser.ACCESS_MODIFIER, 0); }
		public Struct_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_declaration; }
	}

	public final Struct_declarationContext struct_declaration() throws RecognitionException {
		Struct_declarationContext _localctx = new Struct_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_struct_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ACCESS_MODIFIER) {
				{
				setState(176);
				match(ACCESS_MODIFIER);
				}
			}

			setState(179);
			match(STRUCT);
			setState(180);
			identifier();
			setState(181);
			match(COLON);
			setState(182);
			match(INDENT);
			setState(183);
			struct_body();
			setState(184);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_bodyContext extends ParserRuleContext {
		public List<Struct_itemContext> struct_item() {
			return getRuleContexts(Struct_itemContext.class);
		}
		public Struct_itemContext struct_item(int i) {
			return getRuleContext(Struct_itemContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(RabbitParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RabbitParser.NEWLINE, i);
		}
		public Struct_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_body; }
	}

	public final Struct_bodyContext struct_body() throws RecognitionException {
		Struct_bodyContext _localctx = new Struct_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_struct_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			struct_item();
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(188); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(187);
					match(NEWLINE);
					}
					}
					setState(190); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(192);
				struct_item();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_itemContext extends ParserRuleContext {
		public Struct_propertyContext struct_property() {
			return getRuleContext(Struct_propertyContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Struct_declaration_trait_implementationContext struct_declaration_trait_implementation() {
			return getRuleContext(Struct_declaration_trait_implementationContext.class,0);
		}
		public Struct_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_item; }
	}

	public final Struct_itemContext struct_item() throws RecognitionException {
		Struct_itemContext _localctx = new Struct_itemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_struct_item);
		try {
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOTHING:
			case NEVER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(198);
				struct_property();
				}
				break;
			case MAIN:
			case ACCESS_MODIFIER:
			case FUNCTION:
			case OPERATOR:
			case STATIC:
			case OVERRIDE:
			case ABSTRACT:
			case LESSTHAN:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				function_declaration();
				}
				break;
			case TRAIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(200);
				struct_declaration_trait_implementation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_propertyContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Struct_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_property; }
	}

	public final Struct_propertyContext struct_property() throws RecognitionException {
		Struct_propertyContext _localctx = new Struct_propertyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_struct_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			type();
			setState(204);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
